--- a/wasipage.html
+++ b/wasipage.html
@@ -78,7 +78,7 @@
 
   <button onclick="window.open(`/wasiqr`)" class="btn">QR Code</button>
   <button onclick="window.open(`/pair`)" class="btn">Pair Code</button>
-  <button onclick="window.open(`https://github.com/TcronebHackx-Md`)" class="btn">Bot Repo</button>
+  <button onclick="window.open(`https://github.com/TcronebHackx-MD/mr_online-md/tree/main`)" class="btn">Bot Repo</button>
   <button onclick="window.open(`https://t.me/TcronebNet`)" class="btn">Contact Me</button>
   <button onclick="window.open(`https://https://whatsapp.com/channel/0029Vafg8mVLtOj6eAvlZO0w`)" class="btn">Wa Channel</button>
   <button onclick="window.open(`https://www.youtube.com/@cbf_263`)" class="btn">Youtube</button>
